--- a/app/src/main/res/layout/activity_country_data.xml
+++ b/app/src/main/res/layout/activity_country_data.xml
@@ -38,6 +38,19 @@
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView1"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
+
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="20sp"
                 android:layout_marginLeft="10sp"
@@ -132,6 +145,18 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView2"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
 
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="20sp"
@@ -212,6 +237,18 @@
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView3"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
 
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="20sp"
@@ -307,6 +344,19 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView4"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
+
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="20sp"
                 android:layout_marginLeft="10sp"
@@ -400,6 +450,19 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView5"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
 
             <androidx.cardview.widget.CardView
                 android:elevation="@dimen/cardview_compat_inset_shadow"
