--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -141,6 +141,18 @@
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView4"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
 
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="20sp"
@@ -340,6 +352,18 @@
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView1"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
 
 
             <androidx.cardview.widget.CardView
@@ -447,6 +471,18 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView2"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
             <androidx.cardview.widget.CardView
                 android:elevation="@dimen/cardview_compat_inset_shadow"
                 app:cardCornerRadius="20sp"
@@ -522,6 +558,18 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView3"
+                android:layout_marginTop="20sp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/unit_id">
+            </com.google.android.gms.ads.AdView>
         </LinearLayout>
     </ScrollView>
     <com.leo.simplearcloader.SimpleArcLoader
