--- a/app/src/main/res/layout/activity_all_country.xml
+++ b/app/src/main/res/layout/activity_all_country.xml
@@ -6,14 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".AllCountry">
 
-    <include android:id="@+id/country_tool"
-        layout="@layout/country_toolbar"/>
+    <com.google.android.material.appbar.AppBarLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/t1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tool_country"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <EditText
         android:id="@+id/search1"
         android:layout_marginTop="20sp"
-        android:layout_below="@+id/country_tool"
+        android:layout_below="@+id/t1"
         android:layout_marginLeft="10sp"
         android:hint="@string/search_by_country_name"
         android:paddingLeft="10sp"
