--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -265,7 +265,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <TextView
-                            android:text="ACTIVE CASES"
+                            android:text="@string/active_cases"
                             android:textColor="@color/black"
                             android:layout_centerInParent="true"
                             android:layout_width="wrap_content"
