--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <com.leo.simplearcloader.SimpleArcLoader
+        android:id="@+id/loader"
         android:visibility="visible"
         android:layout_centerInParent="true"
         android:layout_width="80sp"
