--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/amethyst"
     android:layout_width="match_parent"
-    android:layout_height="185sp">
-    <de.hdodenhof.circleimageview.CircleImageView
+    android:layout_height="match_parent"
+    tools:context=".SplashActivity">
+    <androidx.cardview.widget.CardView
         android:id="@+id/c1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30sp"
-        android:src="@drawable/splash"
-        android:layout_width="60sp"
-        android:layout_height="60sp"/>
+        app:cardCornerRadius="20sp"
+        android:elevation="1sp"
+       android:layout_centerInParent="true"
+        android:layout_width="130sp"
+        android:layout_height="130sp">
+        <RelativeLayout
+            android:background="@drawable/splash"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
     <TextView
         android:id="@+id/t1"
         android:layout_marginTop="15sp"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/c1"
@@ -25,12 +33,18 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/t2"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="15sp"
         android:textStyle="italic"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/t1"
         android:text="Coronavirus Pandemic"
         android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <ProgressBar
+       android:layout_below="@+id/t2"
+        android:layout_centerHorizontal="true"
+      android:layout_marginTop="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
