--- a/app/src/main/res/menu/slide_bar_design.xml
+++ b/app/src/main/res/menu/slide_bar_design.xml
@@ -10,18 +10,24 @@
         <item android:id="@+id/country"
             android:icon="@drawable/ic_baseline_language_24"
             android:title="@string/affected_countries"/>
+    </group>
+    <group android:id="@+id/g3">
         <item android:id="@+id/safety"
             android:icon="@drawable/ic_baseline_accessibility_24"
             android:title="@string/tips_safety"/>
+    </group>
+    <group android:id="@+id/g4">
+
         <item android:id="@+id/about"
             android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/about"/>
-        <item android:id="@+id/rates"
+    </group>
+     <!--   <item android:id="@+id/rates"
             android:icon="@drawable/ic_baseline_star_border_24"
             android:title="@string/rate_us"/>
         <item android:id="@+id/share"
             android:icon="@drawable/ic_baseline_share_24"
             android:title="@string/share"/>
-    </group>
+    </group> -->
 
 </menu>
