--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#9966cc</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="red">#ff0000 </color>
     <color name="green">#adff2f</color>
@@ -10,4 +10,5 @@
     <color name="white">#ffff</color>
     <color name="black">#000000</color>
     <color name="amethyst">#9966cc</color>
+    <color name="c1">#3700B3</color>
 </resources>
